[metadata]
name = isicle
version = 0.1.0
author = Sean M. Colby
author_email = sean.colby@pnnl.gov
license_file = LICENSE
description = ISiCLE: in silico chemical library engine
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Chemistry
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
setup_requires = pytest-runner; flake8
install_requires =
    numpy>=1.19.4
    openbabel>=3.0.0
    pandas>=1.1.4
    rdkit-pypi
    snakemake>=6.3.0
    statsmodels>=0.11.1
python_requires = >=3.7,<3.10
tests_require = pytest

[aliases]
test=pytest
